# system-control

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Maerklin System Control.kicad_pcb  Maerklin System Control.kicad_prl  Maerklin System Control.kicad_pro  Maerklin System Control.kicad_sch  README.md  fp-info-cache  fp-lib-table  sym-lib-table
components/: CMakeLists.txt
components/imgui/: CMakeLists.txt
components/insa/: CMakeLists.txt
components/insa/include/: MenuOptions.h
components/insa/include/common/: Common.h  IPersistenceManager.h  InactivityTracker.h  Menu.h  PSMenu.h  PersistenceManager.h  ScrollBar.h  Widget.h
components/insa/include/data/: MenuItem.h  roads.h
components/insa/include/ui/: LightMenu.h  LightSettingsMenu.h  MainMenu.h  ScreenSaver.h  SplashScreen.h
components/insa/src/common/: InactivityTracker.cpp  Menu.cpp  PSMenu.cpp  PersistenceManager.cpp  ScrollBar.cpp  Widget.cpp
components/insa/src/data/: MenuItem.cpp
components/insa/src/ui/: LightMenu.cpp  LightSettingsMenu.cpp  MainMenu.cpp  ScreenSaver.cpp  SettingsMenu.cpp  SplashScreen.cpp
components/justus/: CMakeLists.txt
components/justus/include/: MenuOptions.h
components/justus/include/common/: PSMenu.h  ScrollBar.h  Widget.h
components/justus/include/data/: MenuItem.h
components/justus/include/ui/: LightMenu.h  MainMenu.h  SettingsMenu.h  SplashScreen.h
components/justus/src/common/: PSMenu.cpp  ScrollBar.cpp  Widget.cpp
components/justus/src/data/: MenuItem.cpp
components/justus/src/ui/: LightMenu.cpp  MainMenu.cpp  SettingsMenu.cpp  SplashScreen.cpp
components/ruth/: CMakeLists.txt  PushButton.cpp  persistence.c
components/ruth/espressif/: persistence.c
components/ruth/include/: persistence.h
firmware/components/api-server/: CMakeLists.txt  Kconfig  idf_component.yml
firmware/components/api-server/include/: common.h
firmware/components/api-server/src/: api_handlers.c  api_server.c  common.c  websocket_handler.c
firmware/components/bifrost/: CMakeLists.txt  idf_component.yml
firmware/components/bifrost/include/bifrost/: api_handlers.h  api_handlers_util.h  api_server.h  common.h  websocket_handler.h
firmware/components/bifrost/src/: api_handlers.c  api_handlers_devices.c  api_handlers_light.c  api_handlers_static.c  api_handlers_util.c  api_handlers_wifi.c  api_server.c  common.c  websocket_handler.c
firmware/components/connectivity-manager/: CMakeLists.txt  Kconfig  idf_component.yml
firmware/components/connectivity-manager/include/: ble_manager.h  dns_hijack.h  esp_ot_config.h  thread_manager.h  wifi_manager.h
firmware/components/connectivity-manager/include/ble/: ble_connection.h  ble_device.h  ble_scanner.h
firmware/components/connectivity-manager/src/: ble_manager.c  dns_hijack.c  thread_manager.c  wifi_manager.c
firmware/components/connectivity-manager/src/ble/: ble_connection.c  ble_scanner.c
firmware/components/insa/: CMakeLists.txt
firmware/components/insa/include/: MenuOptions.h
firmware/components/insa/include/common/: ColorSettingsMenu.h  Common.h  InactivityTracker.h  Menu.h  ScrollBar.h  Widget.h
firmware/components/insa/include/data/: MenuItem.h  vehicles.h
firmware/components/insa/include/ui/: ClockScreenSaver.h  DayColorSettingsMenu.h  ExternalDevices.h  LightMenu.h  MainMenu.h  NightColorSettingsMenu.h  ScreenSaver.h  SettingsMenu.h  SplashScreen.h
firmware/components/insa/src/common/: ColorSettingsMenu.cpp  InactivityTracker.cpp  Menu.cpp  ScrollBar.cpp  Widget.cpp
firmware/components/insa/src/data/: MenuItem.cpp
firmware/components/insa/src/ui/: ClockScreenSaver.cpp  DayColorSettingsMenu.cpp  ExternalDevices.cpp  LightMenu.cpp  LightSettingsMenu.cpp  MainMenu.cpp  NightColorSettingsMenu.cpp  ScreenSaver.cpp  SettingsMenu.cpp  SplashScreen.cpp
firmware/components/iris/: CMakeLists.txt  Kconfig
firmware/components/iris/include/iris/: iris.h  iris_internal.h
firmware/components/iris/src/: iris.c  iris_coap.c  iris_discovery.c  iris_inventory.c  iris_master.c  iris_storage.c
firmware/components/led-manager/: CMakeLists.txt  Kconfig  idf_component.yml
firmware/components/led-manager/include/: Matrix.h  color.h  led_manager.h  led_segment.h  led_status.h  led_strip_ws2812.h
firmware/components/led-manager/src/: color.c  led_manager.cpp  led_status.c  led_strip_ws2812.c
firmware/components/led-manager/src/hal_esp32/: led_manager.cpp  led_status.cpp
firmware/components/led-manager/src/hal_native/: led_manager.cpp  led_status.cpp
firmware/components/persistence-manager/: CMakeLists.txt
firmware/components/persistence-manager/include/: IPersistenceManager.h  persistence_manager.h
firmware/components/persistence-manager/include/hal_esp32/: PersistenceManager.h
firmware/components/persistence-manager/include/hal_native/: PersistenceManager.h
firmware/components/persistence-manager/src/: PersistenceManager.cpp  persistence_manager.c
firmware/components/persistence-manager/src/hal_esp32/: PersistenceManager.cpp
firmware/components/persistence-manager/src/hal_native/: PersistenceManager.cpp
firmware/components/simulator/: CMakeLists.txt  simulator.c  storage.c
firmware/components/simulator/include/: simulator.h  storage.h
firmware/components/simulator/src/: simulator.c  simulator.cpp  storage.c  storage.cpp
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_task.cpp  button_handling.c  i2c_checker.c  i2c_checker.h  idf_component.yml  main.cpp  setup.h  wifi_handler.c  wifi_handler.h
firmware/main/hal/: u8g2_esp32_hal.c  u8g2_esp32_hal.h
firmware/main/include/: button_handling.h  common.h  i2c_checker.h  u8g2_mqtt.h
firmware/main/include/hal/: u8g2_esp32_hal.h
firmware/main/src/: app_task.cpp  button_handling.c  i2c_checker.c  main.cpp  u8g2_mqtt.cpp
firmware/main/src/hal/: u8g2_esp32_hal.c
main/: CMakeLists.txt  Kconfig.projbuild  PersistenceManager.cpp  PersistenceManager.h  app_task.cpp  app_task.h  button_handling.c  button_handling.h  common.h  idf_component.yml  lcd_lvgl_main.c  main.c  main.cpp  setup.c  setup.h
main/hal/: u8g2_esp32_hal.h
(+241 files in other folders)
