idf_component_register(SRCS
            src/api_server.c
            src/common.c
            src/api_handlers.c
            src/api_handlers_util.c
            src/api_handlers_wifi.c
            src/api_handlers_light.c
            src/api_handlers_devices.c
            src/api_handlers_static.c
            src/websocket_handler.c
        INCLUDE_DIRS "include"
        REQUIRES
            esp_http_server
            mdns
            esp_wifi
            esp_netif
            esp_event
            json
            led-manager
            simulator
            persistence-manager
            message-manager
            my_mqtt_client
            heimdall
            iris
)
