idf_component_register(SRCS
        src/common/InactivityTracker.cpp
        src/common/Menu.cpp
        src/common/ScrollBar.cpp
        src/common/Widget.cpp
        src/data/MenuItem.cpp
        src/ui/ExternalDevices.cpp
        src/ui/LightMenu.cpp
        src/ui/MainMenu.cpp
        src/ui/ClockScreenSaver.cpp
        src/ui/ScreenSaver.cpp
        src/ui/SettingsMenu.cpp
        src/ui/SplashScreen.cpp
        INCLUDE_DIRS "include"
        PRIV_REQUIRES
            u8g2
            connectivity-manager
            led-manager
            persistence-manager
            simulator
            message-manager
)
